# testci

./: CMakeLists.txt  README.md  main.cpp
.github/workflow/: windows.yml
.github/workflows/: ci  ci.yml  clang-format.yml  code-coverage.yml  codeql.yml  ip.yml  linux_clang.yml  linux_gcc.yml  mac.yml  windows.yml
include/: test.hpp
lang/english/: README.md
tests/: CMakeLists.txt  test_testci.cpp
